--- a/Sources/Applications.tex
+++ b/Sources/Applications.tex
@@ -25,7 +25,7 @@ with that of the textbook using Haskell in terms of lines of code.
 \label{sec:ob}
 
 First we give a simple introduction to Object Algebras, a design pattern that
-can solve the Expression Problem~\citep{wadler1998expression} in languages like
+can solve the expression problem~\citep{wadler1998expression} in languages like
 Java. Our starting point is the following code:
 \lstinputlisting[linerange=4-17]{./examples/application.sl}% APPLY:linerange=ALGEBRA_DEF
 \lstinline{ExpAlg[E]} is the generic interface of a simple arithmetic language
