--- a/Sources/Conclusion.tex
+++ b/Sources/Conclusion.tex
@@ -375,8 +375,9 @@ this thesis should still work.
 Having a declarative system is only a start. The major challenge is the
 corresponding algorithmic system. It is known that full type inference is
 undecidable for intersection types. Some restrictions are obviously in order,
-leading to different points in the design space in terms of how much can be
-inferred. We are interested to see some research into the algorithmic system.
+leading to different points in the design space with varying degrees of
+expressiveness and technical difficulties. We are interested to see some
+research into the algorithmic system.
 
 
 \subsection{Disjoint Polymorphism vs. Row Polymorphism}
