--- a/Sources/Nested.tex
+++ b/Sources/Nested.tex
@@ -7,7 +7,7 @@
 This chapter presents \namee, a calculus based on \oname~\citep{oliveira2016disjoint} with disjoint intersection types that
 features both BCD-style subtyping and the merge operator, which we believe
 capture the essence of nested composition. We illustrate this by presenting a
-solution to the Expression Problem based on family polymorphism. We then discuss
+solution to the expression problem based on family polymorphism. We then discuss
 the algorithmic aspects of \namee. The coherence property of \namee is discussed
 in \cref{chap:coherence:simple}.
 
@@ -19,7 +19,7 @@ forms of family polymorphism. More complex forms of family polymorphism,
 involving binary methods~\citep{bruce1995binary} and mutable state are not yet
 supported, but are interesting avenues for future work. Nevertheless, in \namee,
 it is possible, for example, to encode \citeauthor{Ernst_2001}'s elegant family-polymorphism
-solution to the Expression Problem. Compared to \oname the essential novelty of
+solution to the expression problem. Compared to \oname the essential novelty of
 \namee are distributivity rules between function/record types and intersection
 types. These rules are the delta that enable extending the simple forms of
 multiple inheritance/composition supported by \oname into a more powerful form
