--- a/Sources/Nested/overview.tex
+++ b/Sources/Nested/overview.tex
@@ -3,14 +3,14 @@
 \label{nested:sec:overview}
 
 This section illustrates \namee with an encoding of a family polymorphism
-solution to the Expression Problem, and informally presents its salient
+solution to the expression problem, and informally presents its salient
 features.
 
 
 %-------------------------------------------------------------------------------
-\subsection{The Expression Problem, \namee Style}
+\subsection{The expression problem, \namee Style}
 
-The \namee calculus allows us to solve the Expression Problem in a way that is
+The \namee calculus allows us to solve the expression problem in a way that is
 very similar to \citeauthor{Ernst_2001}'s \textsf{gbeta} solution in \cref{sec:ernst}.
 However, the underlying mechanisms of \namee are quite different from those of
 \textsf{gbeta}. In particular, \namee features a structural type system in which we can
