--- a/Sources/Related.tex
+++ b/Sources/Related.tex
@@ -186,7 +186,7 @@ mistakes in Pierce's proofs, as well as some important missing lemmas.
 
 There has been much work on family polymorphism since \citeauthor{Ernst_2001}'s
 original proposal~\citep{Ernst_2001}. Family polymorphism provides an elegant
-solution to the Expression Problem. Although a simple Scala solution does exist
+solution to the expression problem. Although a simple Scala solution does exist
 without requiring family polymorphism (e.g., see \citet{wang2016expression}), Scala does not support nested composition:
 programmers need to manually compose all the classes from multiple extensions.
 Generally speaking, systems that support family polymorphism can be divided into
