--- a/Thesis.bib
+++ b/Thesis.bib
@@ -452,7 +452,7 @@ year		= {2007},
 @inproceedings{Nystrom:2006,
  author = {Nystrom, Nathaniel and Qi, Xin and Myers, Andrew C.},
  title = {{J\&: Nested Intersection for Scalable Software Composition}},
- booktitle = {International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
+ booktitle = {Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)},
  year = {2006},
 }
 
@@ -916,13 +916,6 @@ year		= {2007},
   title =    {Feature-Oriented Programming: A Fresh Look at Objects},
   booktitle =    {Object-Oriented Programming 11th European Conference},
   year =   1997
-}
-
-@inproceedings{nystrom2006j,
-  title={Nested intersection for scalable software composition},
-  author={Nystrom, Nathaniel and Qi, Xin and Myers, Andrew C},
-  booktitle={Object-Oriented Programming: Systems, Languages and Applications (OOPSLA 2006)},
-  year = {2006},
 }
 
 @InProceedings{Zenger-Odersky2005 ,
@@ -1464,4 +1457,10 @@ booktitle = {Archiv. Math. Logik}
   author={Castagna, Giuseppe and Nguyen, Kim and Xu, Zhiwu and Im, Hyeonseung and Lenglet, Sergue{\"\i} and Padovani, Luca},
   booktitle={Principles of Programming Languages (POPL)},
   year={2014}
+}
+
+@book{Naur:1969:SER:1102020,
+ editor = {Naur, Peter and Randell, Brian},
+ title = {Software Engineering: Report of a Conference Sponsored by the NATO Science Committee, Garmisch, Germany, 7-11 Oct. 1968, Brussels, Scientific Affairs Division, NATO},
+ year = {1969},
 }
